--- a/static/form.html
+++ b/static/form.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <body>
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden >
+    <form name="form" netlify netlify-honeypot="bot-field" hidden >
       <input type="text" name="name">
       <input type="email" name="email">
       <textarea name="content">
     </form>
   </body>
-</html>
+</html> -->
