--- a/static/form.html
+++ b/static/form.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <body>
     <form name="form" netlify netlify-honeypot="bot-field" hidden >
@@ -7,4 +7,4 @@
       <textarea name="content">
     </form>
   </body>
-</html> -->
+</html>
