--- a/static/form.html
+++ b/static/form.html
@@ -2,9 +2,9 @@
 <html>
   <body>
     <form name="form" netlify netlify-honeypot="bot-field" hidden >
-      <input type="text" name="name">
-      <input type="email" name="email">
-      <textarea name="content">
+      <input type="text" name="username">
+      <input type="email" name="useremail">
+      <textarea name="message">
     </form>
   </body>
 </html>
