--- a/static/contact.html
+++ b/static/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <form name="form" netlify netlify-honeypot="bot-field" hidden >
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden >
       <input type="text" name="username">
       <input type="email" name="useremail">
       <textarea name="message">
