--- a/static/contact.html
+++ b/static/contact.html
@@ -3,6 +3,7 @@
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden >
       <input type="text" name="username">
+      <input type="text" name="katakana">
       <input type="email" name="useremail">
       <textarea name="message">
     </form>
