--- a/static/contact.html
+++ b/static/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden >
@@ -8,4 +8,4 @@
       <textarea name="message">
     </form>
   </body>
-</html>
+</html> -->
